# PP5

./: .gitignore  CMakeLists.txt
src/: libraries.h  main.c
src/helpers/: helper.c  helper.h
src/pictureOperations/: picture_manipulation.c  picture_manipulation.h
src/rle/: rle.c  rle.h
src/structures/: structures.c  structures.h
test/pictureOperations/: test_picture_manipulation.c  test_picture_manipulation.h
test/rle/: test_rle.c  test_rle.h
